    ADDED - Weathermap will use anti-aliasing if your GD supports it (php-bundled GD doesn't) (thanks shd)
    ADDED - Special token formatting can handle timeticks and time_t formatting (%T and %t respectively)
    ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically enabled in Cacti)
    ADDED - IMAGEOUTPUTFILE and HTMLOUTPUTFILE are honoured in Cacti poller as a location for a second copy of those files.
    ADDED - Editor 'tidy link' function replaces Vert & Horiz, and does much nicer job
    ADDED - 'retidy' option in editor to recalculate all links previously positioned with 'tidy'.
    ADDED - KEYBGCOLOR and KEYOUTLINECOLOR both accept 'none'

0.97c had no additional changes - it's just 0.97b with some silly errors fixed, and  all
the CSS files included with the correct paths. There were also reports of problems with the
actual zip file.

0.97b is a special release starting from 0.97a and backporting all the quick bugfixes from the 0.98 code.
There are larger structural changes in 0.98 and new features, but these bugfixes were useful enough to
warrant a new 0.97 release (especially the mysql schema change). A real 0.98 release will follow in
due course.

Also late addition to 0.97b - a couple of security analysts have pointed out flaws in the editor.
First, the ability to remotely create .php files and then cross-site-scripting vulnerabilities. Both
are really facets of the same thing - lack of input validation. 0.97b improves this a great deal.

Thanks to Gerry Eisenhaur and Daniel Ricardo dos Santos respectively for their security bug reports.

0.97b	FIXED - absolute SCALE definitions didn't support K (thanks wwwdrich)
    FIXED - memory leak in poller code. Memory usage is MUCH lower now.
    FIXED - updated mysql schema commands to use modern ENGINE instead of TYPE;
    FIXED - static datasource plugin honours KILO
    FIXED - check-gdbug.php shouldn't complain about empty ob_flush buffers anymore