@@ -20,10 +20,12 @@ repeat "error reports" in the forums.
     ADDED - Weathermap will use anti-aliasing if your GD supports it (php-bundled GD doesn't) (thanks shd)
     ADDED - Special token formatting can handle timeticks and time_t formatting (%T and %t respectively)
     ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically enabled in Cacti)
+    ADDED - new wmdata: datasource plugin can read data from files produced by DATAOUTPUTFILE
     ADDED - IMAGEOUTPUTFILE and HTMLOUTPUTFILE are honoured in Cacti poller as a location for a second copy of those files.
     ADDED - Editor 'tidy link' function replaces Vert & Horiz, and does much nicer job
     ADDED - 'retidy' option in editor to recalculate all links previously positioned with 'tidy'.
     ADDED - KEYBGCOLOR and KEYOUTLINECOLOR both accept 'none'
+    ADDED - command-line weathermap has new --no-warn option to disable warnings
 
 0.97c had no additional changes - it's just 0.97b with some silly errors fixed, and  all
 the CSS files included with the correct paths. There were also reports of problems with the
